# magent-winrt-musicstatus

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  defs.h  hookproc.h  hooks.c  hooks.h  loc_windows.media.control.h  main.c  main.h  smtc.c  smtc.h  trampoline.c  trampoline.h
